--- a/JavaCRUD/.classpath
+++ b/JavaCRUD/.classpath
@@ -6,17 +6,23 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/sergeyse/.m2/repository/mysql/mysql-connector-java/5.1.22/mysql-connector-java-5.1.22.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sergeyse/.m2/repository/com/seaglasslookandfeel/seaglasslookandfeel/0.2/seaglasslookandfeel-0.2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+	<classpathentry exported="true" kind="lib" path="C:/Users/sergeyse/.m2/repository/mysql/mysql-connector-java/5.1.22/mysql-connector-java-5.1.22.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/sergeyse/.m2/repository/com/seaglasslookandfeel/seaglasslookandfeel/0.2/seaglasslookandfeel-0.2.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Users/sergeyse/Downloads/SQL/sqljdbc_4.0/enu/sqljdbc4.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/sergeyse/Downloads/Mailer/Mail/Mail/commons-codec-1.7/commons-codec-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/sergeyse/Downloads/Mailer/Mail/Mail/commons-logging-1.1.1/commons-logging-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/sergeyse/Downloads/Mailer/Mail/Mail/EWSJavaAPI_1.2/EWSJavaAPI_1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/sergeyse/Downloads/Mailer/Mail/Mail/commons-httpclient-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/sergeyse/Downloads/Mailer/Mail/Mail/jcifs-1.3.17.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
