--- a/JavaCRUD/.settings/org.eclipse.core.resources.prefs
+++ b/JavaCRUD/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//Scripts/resultAllIspan.txt=UTF-8
 encoding/<project>=UTF-8
 encoding/IspanResult.txt=UTF-8
 encoding/result.txt=UTF-8
